Initial commit for adding recipe support for rabbitmq
